fixed overlap images and repeating sidebar message

--- a/app/assets/stylesheets/saint_rock.css.scss
+++ b/app/assets/stylesheets/saint_rock.css.scss
@@ -40,19 +40,21 @@ body {
 .header-overlap-image1 {
   background: url('/assets/overlap1.jpg') no-repeat top left;
   width: 482px;
-  height: 253px;
+  height: 254px;
   left: -21px;
   top: -92px;
   position: relative;
+  margin-bottom: -92px;
 }
 
 .header-overlap-image2 {
   background: url('/assets/overlap2.jpg') no-repeat top left;
   width: 482px;
-  height: 253px;
+  height: 254px;
   left: -21px;
   top: -92px;
   position: relative;
+  margin-bottom: -92px;
 }
 
 #body_content {
